Reafctor: add spacing and correct image widths

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,8 @@
       @apply bg-white text-foreground;
    }
 }
+
+.shadow-full {
+   box-shadow: -0.5px 0 5px rgba(0, 0, 0, 0.2), -0.5px 0 5px rgba(0, 0, 0, 0.2),
+      0 5px 5px rgba(0, 0, 0, 0.2);
+}
